been using this awhile now - consider spi refactoring